--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "express": "^4.18.3",
     "pg": "^8.11.4",
     "twitter-api-v2": "^1.16.1"
